@@ -9,10 +9,10 @@
 		<include>CommonBackground</include>
 		<control type="image">
 			<posx>0</posx>
-			<posy>90r</posy>
+			<posy>100r</posy>
 			<width>1280</width>
-			<height>90</height>
-			<texture>floor.png</texture>
+			<height>100</height>
+			<texture>homefloor.png</texture>
 			<animation effect="fade" time="250" condition="Window.Previous(Home)">WindowOpen</animation>
 			<animation effect="fade" time="250" condition="Window.Next(Home)">WindowClose</animation>
 		</control>
