@@ -16,9 +16,9 @@
 				<posy>100r</posy>
 				<width>1280</width>
 				<height>100</height>
+				<aspectratio>stretch</aspectratio>
+				<include>VisibleFadeEffect</include>
 				<texture>floor.png</texture>
-				<animation effect="slide" start="0,10" end="0,0" time="200" condition="Window.Previous(Home)">WindowOpen</animation>
-				<animation effect="slide" start="0,0" end="0,10" time="200" condition="Window.Next(Home)">WindowClose</animation>
 			</control>
 			<control type="image">
 				<description>LOGO</description>
