@@ -45,10 +45,9 @@
 			<posy>100r</posy>
 			<width>1280</width>
 			<height>100</height>
-			<texture>floor.png</texture>
+			<aspectratio>stretch</aspectratio>
 			<include>VisibleFadeEffect</include>
-			<animation effect="slide" start="0,10" end="0,0" time="200" condition="Window.Previous(Home)">WindowOpen</animation>
-			<animation effect="slide" start="0,0" end="0,10" time="200" condition="Window.Next(Home)">WindowClose</animation>
+			<texture>floor.png</texture>
 		</control>
 		<control type="group">
 			<animation type="WindowOpen" reversible="false">
