@@ -11,8 +11,9 @@
 			<posy>100r</posy>
 			<width>1280</width>
 			<height>100</height>
-			<texture>floor.png</texture>
+			<aspectratio>stretch</aspectratio>
 			<include>VisibleFadeEffect</include>
+			<texture>floor.png</texture>
 		</control>
 		<control type="group">
 			<posx>90</posx>
