@@ -102,10 +102,9 @@
 			<posy>100r</posy>
 			<width>1280</width>
 			<height>100</height>
-			<texture>floor.png</texture>
 			<aspectratio>stretch</aspectratio>
-			<animation effect="slide" start="0,10" end="0,0" time="200" condition="Window.Previous(Home)">WindowOpen</animation>
-			<animation effect="slide" start="0,0" end="0,10" time="200" condition="Window.Next(Home)">WindowClose</animation>
+			<include>VisibleFadeEffect</include>
+			<texture>floor.png</texture>
 		</control>
 		<control type="image">
 			<description>Section header image</description>
