@@ -1,6 +1,7 @@
 [B]1.0.4[/B]
 - Updated language files from Transifex
 - Bugfix added return to video playlist command
+- Returned Hard Floor Image to all screens except Home
 
 [B]1.0.3[/B]
 - Added Info Stats Bar
